--- a/WebRoot/income_cate.html
+++ b/WebRoot/income_cate.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>数据列表页面</title>
     <!-- layui.css -->
-    <link href="../plugin/layui/css/layui.css" rel="stylesheet" />
+    <link href="plugin/layui/css/layui.css" rel="stylesheet" />
     <style>
         .layui-btn-small {
             padding: 0 15px;
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <script type="text/javascript" src="../js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
     <fieldset id="dataList" class="layui-elem-field layui-field-title sys-list-field" style="display:none;">
 <!--         <legend style="text-align:center;">控制台</legend> -->
         <blockquote class="layui-elem-quote">
@@ -87,11 +87,11 @@
         </div>
     </fieldset>
     <!-- layui.js -->
-    <script src="../plugin/layui/layui.js"></script>
+    <script src="plugin/layui/layui.js"></script>
     <!-- layui规范化用法 -->
     <script type="text/javascript">
         layui.config({
-            base: '../js/'
+            base: 'js/'
         }).use('income_cate');
 
         layui.use(['layer'], function () {
