--- a/WebRoot/record/income.html
+++ b/WebRoot/record/income.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" />
     <title>数据列表页面</title>
     <!-- layui.css -->
-    <link href="../../plugin/layui/css/layui.css" rel="stylesheet" />
+    <link href="../plugin/layui/css/layui.css" rel="stylesheet" />
     <style>
         .layui-btn-small {
             padding: 0 15px;
@@ -121,11 +121,11 @@
         </div>
     </fieldset>
     <!-- layui.js -->
-    <script src="../../plugin/layui/layui.js"></script>
+    <script src="../plugin/layui/layui.js"></script>
     <!-- layui规范化用法 -->
     <script type="text/javascript">
         layui.config({
-            base: '../../js/'
+            base: '../js/'
         }).use('income');
     </script>
 </body>
