--- a/WebRoot/bill.html
+++ b/WebRoot/bill.html
@@ -6,8 +6,8 @@
 	<style type="text/css"></style>
 </head>
 <body>
-    <script src="../code/highcharts.js"></script>
-    <script src="../code/modules/exporting.js"></script>
+    <script src="code/highcharts.js"></script>
+    <script src="code/modules/exporting.js"></script>
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
     <script type="text/javascript">
         Highcharts.chart('container', {
