--- a/WebRoot/cost_cate.html
+++ b/WebRoot/cost_cate.html
@@ -1,12 +1,3 @@
-<!--
-
- @Name：不落阁后台模板源码
- @Author：Absolutely
- @Site：http://www.lyblogs.cn
-
- -->
-
-
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -14,7 +5,7 @@
     <meta charset="utf-8" />
     <title>数据列表页面</title>
     <!-- layui.css -->
-    <link href="../plugin/layui/css/layui.css" rel="stylesheet" />
+    <link href="plugin/layui/css/layui.css" rel="stylesheet" />
     <style>
         .layui-btn-small {
             padding: 0 15px;
@@ -94,11 +85,11 @@
         </div>
     </fieldset>
     <!-- layui.js -->
-    <script src="../plugin/layui/layui.js"></script>
+    <script src="plugin/layui/layui.js"></script>
     <!-- layui规范化用法 -->
     <script type="text/javascript">
         layui.config({
-            base: '../js/'
+            base: 'js/'
         }).use('cost_cate');
     </script>
 </body>
