--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -6,17 +6,17 @@
     <title>账单后台管理系统</title>
     <link rel="shortcut icon" href="../images/Logo_40.png" type="image/x-icon">
     <!-- layui.css -->
-    <link href="../plugin/layui/css/layui.css" rel="stylesheet" />
+    <link href="plugin/layui/css/layui.css" rel="stylesheet" />
     <!-- font-awesome.css -->
-    <link href="../plugin/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="plugin/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <!-- animate.css -->
-    <link href="../css/animate.min.css" rel="stylesheet" />
+    <link href="css/animate.min.css" rel="stylesheet" />
     <!-- 本页样式 -->
-    <link href="../css/main.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
 </head>
 <body>
-    <script src="../code/highcharts.js"></script>
-    <script src="../code/modules/exporting.js"></script>
+    <script src="code/highcharts.js"></script>
+    <script src="code/modules/exporting.js"></script>
     <div class="layui-layout layui-layout-admin">
         <!--顶部-->
         <div class="layui-header">
@@ -133,11 +133,11 @@
         </div>
     </div>
     <!-- layui.js -->
-    <script src="../plugin/layui/layui.js"></script>
+    <script src="plugin/layui/layui.js"></script>
     <!-- layui规范化用法 -->
     <script type="text/javascript">
         layui.config({
-            base: '../js/'
+            base: 'js/'
         }).use('main');
     </script>
 
