--- a/WebRoot/record/cost.html
+++ b/WebRoot/record/cost.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 
  @Name：不落阁后台模板源码
  @Author：Absolutely
@@ -67,8 +67,18 @@
     </style>
 </head>
 <body>
+    <blockquote class="layui-elem-quote">
+        <a href="javascript:;" class="layui-btn layui-btn-small" id="add">
+            <i class="layui-icon">&#xe608;</i> 添加信息
+        </a>
+        <a href="#" class="layui-btn layui-btn-small" id="import">
+            <i class="layui-icon">&#xe608;</i> 导入信息
+        </a>
+        <a href="#" class="layui-btn layui-btn-small">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i> 导出信息
+        </a>
+    </blockquote>
     <fieldset id="dataConsole" class="layui-elem-field layui-field-title"  style="display:none;">
-        <legend>控制台</legend>
         <div class="layui-field-box">
             <div id="articleIndexTop">
                 <form class="layui-form layui-form-pane" action="">
@@ -78,9 +88,10 @@
                             <div class="layui-input-inline">
                                 <select name="city">
                                     <option value="0"></option>
-                                    <option value="1">类别1</option>
-                                    <option value="2">类别2</option>
-                                    <option value="3">类别3</option>
+                                    <option value="1">衣服</option>
+                                    <option value="2">食品</option>
+                                    <option value="3">交通</option>
+                                    <option value="4">旅游</option>
                                 </select>
                             </div>
                             <label class="layui-form-label">关键词</label>
@@ -91,71 +102,17 @@
                                 <button class="layui-btn" lay-submit lay-filter="formSearch">搜索</button>
                             </div>
                         </div>
-                        <div class="layui-inline">
-                            <div class="layui-input-inline" style="width:auto">
-                                <a id="addArticle" class="layui-btn layui-btn-normal">发表文章</a>
-                            </div>
-                        </div>
                     </div>
                 </form>
             </div>
         </div>
     </fieldset>
     <fieldset id="dataList" class="layui-elem-field layui-field-title sys-list-field" style="display:none;">
-        <legend style="text-align:center;">文章列表</legend>
+        <legend style="text-align:center;">支出列表</legend>
         <div class="layui-field-box">
             <div id="dataContent" class="">
                 <!--内容区域 ajax获取-->
-                <table style="" class="layui-table" lay-even="">
-                    <colgroup>
-                        <col width="180">
-                        <col>
-                        <col width="150">
-                        <col width="180">
-                        <col width="90">
-                        <col width="90">
-                        <col width="50">
-                        <col width="50">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>发表时间</th>
-                            <th>标题</th>
-                            <th>作者</th>
-                            <th>类别</th>
-                            <th colspan="2">选项</th>
-                            <th colspan="2">操作</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>2017-03-22 23:07</td>
-                            <td>不落阁后台模板源码分享</td>
-                            <td>Absolutely</td>
-                            <td>Web前端</td>
-                            <td>
-                                <form class="layui-form" action="">
-                                    <div class="layui-form-item" style="margin:0;">
-                                        <input type="checkbox" name="top" title="置顶" lay-filter="top" checked>
-                                    </div>
-                                </form>
-                            </td>
-                            <td>
-                                <form class="layui-form" action="">
-                                    <div class="layui-form-item" style="margin:0;">
-                                        <input type="checkbox" name="top" title="推荐" lay-filter="recommend" checked>
-                                    </div>
-                                </form>
-                            </td>
-                            <td>
-                                <button class="layui-btn layui-btn-small layui-btn-normal"><i class="layui-icon">&#xe642;</i></button>
-                            </td>
-                            <td>
-                                <button class="layui-btn layui-btn-small layui-btn-danger"><i class="layui-icon">&#xe640;</i></button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+
                 <div id="pageNav"></div>
             </div>
         </div>
@@ -166,7 +123,7 @@
     <script type="text/javascript">
         layui.config({
             base: '../js/'
-        }).use('datalist');
+        }).use('cost');
     </script>
 </body>
 </html>
