--- a/WebRoot/cost_cate.html
+++ b/WebRoot/cost_cate.html
@@ -64,6 +64,7 @@
             <a href="javascript:;" class="layui-btn layui-btn-small" id="add">
                 <i class="layui-icon">&#xe608;</i> 添加信息
             </a>
+            <button class="layui-btn layui-btn-small layui-btn-normal" id="del"><i class="layui-icon"></i> 删除</button>
             <form class="layui-form" style="float:right;">
                 <div class="layui-form-item" style="margin:0;">
                     <label class="layui-form-label">名称</label>
