--- a/WebRoot/record/co_add.html
+++ b/WebRoot/record/co_add.html
@@ -11,7 +11,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="format-detection" content="telephone=no">
 
-		<link rel="stylesheet" href="../../plugin/layui/css/layui.css" media="all" />
+		<link rel="stylesheet" href="../plugin/layui/css/layui.css" media="all" />
 	</head>
 
 	<body>
@@ -21,43 +21,43 @@
 				<div class="layui-form-item">
 					<label class="layui-form-label">类别</label>
 					<div class="layui-input-block">
-						<select name="cate" lay-filter="aihao">
+						<select id="cate" lay-filter="aihao">
 							<option value="请选择"></option>
-							<option value="0">衣服</option>
-							<option value="1">食品</option>
-							<option value="3">交通</option>
-							<option value="4">旅游</option>
+							<option value="衣服">衣服</option>
+							<option value="食品">食品</option>
+							<option value="交通">交通</option>
+							<option value="旅游">旅游</option>
 						</select>
 					</div>
 
                     <label class="layui-form-label">成员</label>
+				<div class="layui-input-block">
+					<select name="member" id="member">
+						<option value="请选择"></option>
+						<option value="父亲">父亲</option>
+						<option value="母亲">母亲</option>
+						<option value="我">我</option>
+						<option value="妹妹">妹妹</option>
+					</select>
+				</div>
+
+				<div class="layui-inline">
+					<label class="layui-form-label">金额</label>
+					<div class="layui-input-inline">
+						<input type="number" id="number" lay-verify="number" autocomplete="off" class="layui-input">
+					</div>
+				</div>
+
+				<div class="layui-inline">
+					<label class="layui-form-label">日期</label>
 					<div class="layui-input-block">
-						<select name="member" lay-filter="aihao">
-							<option value="请选择"></option>
-							<option value="0">父亲</option>
-							<option value="1">母亲</option>
-							<option value="3">我</option>
-							<option value="4">妹妹</option>
-						</select>
+						<input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
 					</div>
-
-					<div class="layui-inline">
-						<label class="layui-form-label">金额</label>
-						<div class="layui-input-inline">
-							<input type="number" name="number" lay-verify="number" autocomplete="off" class="layui-input">
-						</div>
-					</div>
-
-					<div class="layui-inline">
-						<label class="layui-form-label">日期</label>
-						<div class="layui-input-block">
-							<input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})">
-						</div>
-					</div>
+				</div>
 				</div>			
 			</form>
 		</div>
-		<script type="text/javascript" src="../../plugin/layui/layui.js"></script>
+		<script type="text/javascript" src="../plugin/layui/layui.js"></script>
 		<script>
 			layui.use(['form', 'layedit', 'laydate'], function() {
 				var form = layui.form(),
