--- a/WebRoot/record/income.html
+++ b/WebRoot/record/income.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <blockquote class="layui-elem-quote">
-        <a href="javascript:;" class="layui-btn layui-btn-small"><i class="iconfont icon-shanchu1"></i>删除</a>
+        <a href="javascript:;" class="layui-btn layui-btn-small" id="del"><i class="iconfont icon-shanchu1"></i>删除</a>
         <a href="javascript:;" class="layui-btn layui-btn-small" id="add">
             <i class="layui-icon">&#xe608;</i> 添加信息
         </a>
