--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <title>账单后台管理系统</title>
-    <link rel="shortcut icon" href="../images/Logo_40.png" type="image/x-icon">
     <!-- layui.css -->
     <link href="plugin/layui/css/layui.css" rel="stylesheet" />
     <!-- font-awesome.css -->
@@ -187,7 +186,7 @@
                 data: [7.0, 18.2, 21.5, 25.2, {
                     y: 26.5,
                     marker: {
-                        symbol: 'url(main.html)'
+                        symbol: 'url(index.html)'
                     }
                 }, 23.3, 9.6]
 
@@ -199,7 +198,7 @@
                 data: [{
                     y: 3.9,
                     marker: {
-                        symbol: 'url(main.html)'
+                        symbol: 'url(index.html)'
                     }
                 }, 4.2, 16.6, 14.2, 10.3, 6.6, 4.8]
             }]
