--- a/WebRoot/income_stat.html
+++ b/WebRoot/income_stat.html
@@ -2,65 +2,71 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Highcharts Example</title>
-
-		<style type="text/css">
-
-		</style>
+		<title></title>
+		<style type="text/css"></style>
 	</head>
-	<body>
-
+<body>
+<script src="js/jquery-1.8.3.min.js"></script>
 <script src="code/highcharts.js"></script>
 <script src="code/highcharts-3d.js"></script>
-<script src="code/modules/exporting.js"></script>
-
+<script src="code/modules/exporting.js"></script>  
 <div id="container" style="height: 400px"></div>
-
-
-		<script type="text/javascript">
-
-Highcharts.chart('container', {
-    chart: {
-        type: 'pie',
-        options3d: {
-            enabled: true,
-            alpha: 45,
-            beta: 0
-        }
-    },
-    title: {
-        text: '收入来源比例'
-    },
-    tooltip: {
-        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-    },
-    plotOptions: {
-        pie: {
-            allowPointSelect: true,
-            cursor: 'pointer',
-            depth: 35,
-            dataLabels: {
+<script type="text/javascript">
+    mychart = new Highcharts.chart('container', {
+        chart: {
+            type: 'pie',
+            options3d: {
                 enabled: true,
-                format: '{point.name}'
+                alpha: 45,
+                beta: 0
             }
+        },
+        title: {
+            text: '收入来源比例'
+        },
+        tooltip: {
+            pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+        },
+        plotOptions: {
+            pie: {
+                allowPointSelect: true,
+                cursor: 'pointer',
+                depth: 35,
+                dataLabels: {
+                    enabled: true,
+                    format: '{point.name}'
+                }
+            }
+        },
+        series: [{
+            type: 'pie',
+            name: '收入来源比例'
+        }]
+    });
+    
+    function getData(){
+    	var list = new Array();
+        var html = $.ajax({
+           type: "GET",
+           url:  "IncomeService?action=form",
+           async: false
+        }).responseText;     
+        var datalist = JSON.parse(html);
+        // generate an array of random data
+        var data = [],i;
+        for (i = 0; i < datalist.length; i++) {
+           data.push({
+              name: datalist[i].cate,
+              y: datalist[i].sum
+           });
         }
-    },
-    series: [{
-        type: 'pie',
-        name: 'Browser share',
-        data: [
-            ['工资', 45.0],
-            ['奖金', 26.8],
-            {
-                name: '股票',
-                y: 12.8,
-                sliced: true,
-                selected: true
-            },
-            ['理财', 8.5],
-        ]
-    }]
-});
-		</script>
-	</body>
+        return data;
+    }
+    
+    mychart.series[0].setData(getData());
+    setInterval(function() {
+    	mychart.series[0].setData(getData());
+    }, 5000);
+</script>
+</body>
 </html>
