--- a/WebRoot/add.html
+++ b/WebRoot/add.html
@@ -62,7 +62,7 @@
 	</script>
 	<script>
 	    urlId = document.URL.split('?')[1].split("=")[1];
-	    cate = document.URL.split('?')[1].split('&')[1].split("=")[1];
+	//    cate = document.URL.split('?')[1].split('&')[1].split("=")[1];
 	    console.log(cate);
 		$(function(){
 			var cate = $("#cate");
