--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -64,8 +64,8 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><i class="fa fa-cog"></i>统计管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;" data-url="income_stat.html" data-id="7">收入统计</a></dd>
-                            <dd><a href="javascript:;" data-url="cost_stat.html" data-id="8">支出统计</a></dd>
+                            <dd><a href="javascript:;" data-url="chart.html?id=1" data-id="7">收入统计</a></dd>
+                            <dd><a href="javascript:;" data-url="chart.html?id=2" data-id="8">支出统计</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
