--- a/WebRoot/record.html
+++ b/WebRoot/record.html
@@ -59,6 +59,7 @@
 </head>
 <body>
     <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cookie.min.js"></script>
     <blockquote class="layui-elem-quote">
         <a href="javascript:;" class="layui-btn layui-btn-small" id="del"><i class="iconfont icon-shanchu1"></i>删除</a>
         <a href="javascript:;" class="layui-btn layui-btn-small" id="add">
@@ -101,7 +102,7 @@
         <div class="layui-field-box">
             <div class="">
             <table style="" class="layui-table" lay-even>
-            <colgroup><col width="60"><col width="150"><col width="150"><col width="180"><col width="180"><col width="150"></colgroup>
+            <colgroup><col width="60"><col width="200"><col width="250"><col width="280"><col width="180"><col width="150"></colgroup>
             <thead><tr><th><form class="layui-form" action=""><input type="checkbox" lay-filter="select_all" title="全选" name="all"></form></th><th>类别</th><th>成员</th><th>总额</th><th>日期</th><th colspan="2">操作</th></tr></thead>
             <tbody id="dataContent">
             </tbody>
