--- a/WebRoot/add.html
+++ b/WebRoot/add.html
@@ -3,21 +3,18 @@
 
 <head>
 <meta charset="utf-8">
-<title>表单</title>
+<title>添加</title>
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="format-detection" content="telephone=no">
-
 <link rel="stylesheet" href="plugin/layui/css/layui.css" media="all" />
 </head>
 
 <body>
 	<div style="margin: 15px;">
-
 		<form class="layui-form" action="">
 			<div class="layui-form-item">
 				<label class="layui-form-label">类别</label>
@@ -100,7 +97,5 @@
             }
 		})
 	</script>
-	
 </body>
-
 </html>
